--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
             <div id="contents">
                 <div id="box-video">
-                    <video class="video-mp4" controls loop muted>
-                        <source src="img/chungcu_themeo.mp4" type="video/mp4">
+                    <video class="video-mp4" controls loop muted poster="img/poster_recommend.png">
+                        <source src="img/recommend.mp4" type="video/mp4">
                     </video>
                 </div>
 
