--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div id="contents">
                 <div id="box-video">
-                    <video class="video-mp4" controls loop muted poster="img/poster_recommend.png">
+                    <video class="video-mp4" controls loop poster="img/poster_recommend.png">
                         <source src="img/recommend.mp4" type="video/mp4">
                     </video>
                 </div>
